   Fixed by: Bas van der Vlies

 * Added a new parameter:
     * subject_field_separator, default value is &

   This is used to set tickets fields via the subject line. It used to
   be , .For backwards compatibility we introduced this parameter. 
   closes #166
   Suggested by: Dennis McRitchie ( dmcr at Princeton dot EDU )
   Fixed by    : Bas van der Vlies

 * Prevent a mail loop for new tickets when ticket email address is set 
   in CC and reply_all is set.
   Reported by: otto at bergerdata dot de
   Fixed vy   : Bas van der Vlies
   
 -- Bas van der Vlies <bas@sara.nl>  Thu, 22 Oct 2009 17:47:50 +0200

email2trac (1.0.0-1) stable; urgency=low

  * Implemented a new feature to drop the HTML version of multipart/alternative
    message part. Such a message part contains the same info. The info is sent
    in different formats and the client can decide which version to use.
    closes #30

    to enable in email2trac.conf:
        - drop_alternative_html_version: 1
 
    Implemented by: Bas van der Vlies

 -- Bas van der Vlies <basv@sara.nl>  Tue, 25 Aug 2009 11:50:40 +0200

email2trac (0.90-1) stable; urgency=low

  * updated aclocal.m4 to support python versions 2.5 and 2.6, closes #137
  * use the email addres in the reporter field, closes #136
  * Fixed an error in blog update function

    All Fixes by: Bas van der Vlies

  * if alternate notify template is set then also set ticket id. It will show
    up as ticket change, closes #142
    Reported by: hju att jochenkuhl dot de
    Fixed by: Bas van der Vlies

  * Error in urllib.quote(filename) could not handle unicode 
    filenames, closes #138
    
    Reported by: debacle at debian dot org
    Applied  by: Bas van der Vlies

  
  * Fixed an error when debug is on and the body message contains unicode
    strings, closes #144
    Reported by: trumbitta at gmail dot com
    Applied by: Bas van der Vlies

  * default trac version for email2trac is now updated to 0.11
